# akeso

./: .gitignore  USER_GUIDE.md  build.py  pyproject.toml  requirements.txt
catalog/: k8s_v1_distilled.json
src/akeso/analyzers/: best_practices.py  cross_resource.py  registry.py
src/akeso/cli/: main.py
src/akeso/cli/commands/: base.py  catalog.py  completion.py  heal.py  scan.py
src/akeso/core/: bridge.py  catalog_manager.py  config.py  context.py  deprecations.py  engine.py  io.py  pipeline.py
src/akeso/parsers/: lexer.py  scanner.py  shadow.py  structurer.py
src/akeso/parsers/metadata_extractors/: config_extractor.py  hpa_extractor.py  ingress_extractor.py  labels_extractor.py  sa_extractor.py  selector_extractor.py  volume_extractor.py
src/akeso/pro/: deprecations.py  license.py
src/akeso/ui/: diff.py  formatter.py
tests/: benchmark.py  fuzz_lexer.py  setup_simulation.py  stress_phase2.py  stress_test.py  verify_analyzers.py  verify_catalog_update.py  verify_config.py  verify_pipeline.py
tests/corpus/dirty/: flush_left.yaml
tests/corpus/edge_cases/: block_scalars.yaml
tests/corpus/real_world/: argo_app.yaml  broken_helm_indent.yaml  helm_render.yaml  prometheus.yaml
tests/corpus/stress/: anchors.yaml  chaos.yaml  deep.yaml  helm_artifact.yaml  norway.yaml  tabs.yaml
tests/mock_upstream/: k8s_v1.99_distilled.json
